<resources>
    <string name="app_name" translatable="false">Ergo Wallet</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_transactions_filter">Filter transactions</string>
    <string name="label_transactions_filter_all">All transactions</string>
    <string name="label_transactions_filter_erg_only">ERG only</string>
    <string name="title_wallets">Wallets</string>
    <string name="title_settings">Settings</string>
    <string name="format_erg" translatable="false">###,##0.0000</string>
    <string name="format_erg_more_precise" translatable="false">###,##0.000000</string>
    <string name="format_fiat" translatable="false">###,##0.00</string>
    <string name="button_unlock">Unlock app</string>
    <string name="hint_password">Please enter your spending password</string>
    <string name="label_forgot_password">Forgot your password?</string>
    <string name="err_password">Passwords must be at least 8 characters long</string>
    <string name="label_password">Password</string>
    <string name="label_password_confirm">Confirm password</string>
    <string name="err_password_confirm">Passwords do not match</string>
    <string name="desc_show_password">Show password</string>
    <string name="desc_hide_password">Hide password</string>
    <string name="button_done">Done</string>
    <string name="button_apply">Apply</string>
    <string name="button_copy">Copy</string>
    <string name="label_copied">Copied!</string>
    <string name="label_qr_code">QR Code</string>
    <string name="label_amount">Amount</string>
    <string name="hint_amount_currency">Amount (%1$s)</string>
    <string name="label_purpose">Purpose</string>
    <string name="label_share">Share</string>
    <string name="label_open_in_explorer">Open in Explorer</string>
    <string name="button_delete">Delete</string>
    <string name="label_export">Export</string>
    <string name="button_yes">Yes</string>
    <string name="button_reload">Reload</string>
    <string name="button_retry">Retry</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_none">None</string>
    <string name="label_details">Details</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="label_remove">Remove</string>
    <string name="label_confirm">Confirm</string>
    <string name="button_back">Back</string>
    <string name="label_erg_amount">%1$s ERG</string>
    <string name="label_time_span_just_now">just now</string>
    <string name="label_time_span_moments_ago">a few moments ago</string>
    <string name="label_time_span_minutes_ago">%1$s minutes ago</string>
    <string name="label_time_span_hours_ago">%1$s hours ago</string>
    <string name="label_time_span_days_ago">%1$s days ago</string>
    <string name="error_camera">Error initializing camera. Please check your privacy settings.</string>
    <string name="desc_copy_sensitive_data">Please be aware that by copying the data to the device\'s
        clipboard, every app running on this device can access it as long as you do not overwrite
        the clipboard data. You do this at your own risk.</string>
    <string name="button_copy_sensitive_data">Copy and accept risks</string>
    <string name="error_no_wallet">No wallet added to this app yet.</string>
    <string name="label_tokens">tokens</string>
    <string name="label_regular_tokens">Tokens</string>
    <string name="label_nfts">NFTs</string>
    <string name="label_audio_nfts">Audio NFTs</string>
    <string name="label_more_tokens">more tokens</string>
    <string name="label_unnamed_token">(unnamed token)</string>
    <string name="label_unconfirmed">unconfirmed</string>
    <string name="button_receive">Receive</string>
    <string name="button_send">Send</string>
    <string name="button_display_currency">Display currency: %1$s</string>
    <string name="label_last_sync">Last sync: %1$s</string>
    <string name="label_erg_price">1 ERG ≈</string>
    <string name="label_fiat_amount">≈ %1$s</string>
    <string name="label_wallet_default">My wallet</string>
    <string name="label_readonly_wallet_default">My wallet (Read only)</string>
    <string name="hint_signing_request">Please scan the signing request from the appropriate
       Wallet\'s Send funds screen.</string>
    <string name="hint_readonly_signing_request">You scanned a signing request, but the wallet is
        set up as read only. Please restore with your mnemonic.</string>
    <string name="error_qr_code_content_unknown">The scanned QR code was not of a known format.</string>
    <string name="hint_auth_request">It looks like you scanned an auth request, but this is for sending funds.
        Please scan auth requests from the main screen or wallet details screen.</string>
    <string name="menu_add_wallet">Add wallet</string>
    <string name="label_create_wallet">New wallet</string>
    <string name="desc_create_wallet">Creates a wallet (keys and an address) from a randomly generated mnemonic.</string>
    <string name="label_restore_wallet">Restore wallet</string>
    <string name="desc_restore_wallet">Restores a wallet\'s keys and address from a mnemonic phrase.</string>
    <string name="label_import_wallet">Import wallet</string>
    <string name="desc_import_wallet">Use an exported or saved wallet file to import an existing wallet (keys and addresses).</string>
    <string name="label_readonly_wallet">Read-only wallet</string>
    <string name="desc_readonly_wallet">Add a wallet address in read-only mode. This won\'t save any secrets on this device.</string>
    <string name="intro_add_readonly">Enter your public wallet address or your extended public key to add the
        wallet in read-only mode.</string>
    <string name="label_wallet_address">Wallet address or key</string>
    <string name="error_address_already_added">Address already added to \'%1$s\'</string>
    <string name="error_invalid_readonly_input">Not a valid ERG address or public key</string>
    <string name="intro_create_wallet">This is your 15-word Ergo wallet mnemonic. These words are also known as a seed phrase or
        paper key.
        With these 15 words, you can restore your wallet on other devices if you lose access to this one.\nIt is crucial
    that you carefully write down all 15 words (with pen and paper) and store them in a safe place.</string>
    <string name="intro_confirm_create_wallet">To confirm that your handwritten mnemonic is correct, enter two words of the phrase now:</string>
    <string name="check_confirm_create_wallet">I understand that I am responsible for storing my mnemonic in a safe place.
    It is the only way to access my wallet if the keys stored on this device are lost or inaccessible.</string>
    <string name="label_word_confirm_create_wallet">Word %1$s</string>
    <string name="error_word_confirm_create_wallet">Word not correct</string>
    <string name="intro_restore_wallet">Enter your Ergo wallet mnemonic to regenerate the wallet.</string>
    <string name="label_restore_wallet_word_list">Problems reading your notes?
        <a href="https://github.com/ergoplatform/ergo/blob/master/ergo-wallet/src/main/resources/wordlist/english.txt">Check out the word list</a>
            and compare.</string>
    <string name="button_restore">Restore wallet</string>
    <string name="mnemonic_length_not_enough">Some words are missing from your mnemonic. Add at least %1$s more.</string>
    <string name="mnemonic_unknown_words">Mnemonic contains invalid words. Check for typos.</string>
    <string name="mnemonic_invalid">Mnemonic validation failed. If you are sure you have entered it correctly, you can tap again to proceed.</string>
    <string name="hint_desktop_kya">Please read and understand our <a href="https://github.com/ergoplatform/ergo-wallet-app/blob/develop/desktop/RUN.md#know-your-assumptions">KYA
        regarding storing your secrets</a>. For best security, use a <a href="https://github.com/ergoplatform/ergo-wallet-app/wiki/Cold-wallet">cold wallet</a>.
    </string>
    <string name="intro_save_wallet">Your wallet\'s main public address is:</string>
    <string name="intro_save_wallet2">You can add additional addresses later.</string>
    <string name="intro_save_wallet_derived_addresses_num">Found %1$s used addresses in total.</string>
    <string name="intro_save_wallet3">Choose how the wallet and keys should be saved on this device.</string>
    <string name="button_alt_address">This is not my address</string>
    <string name="button_save_password_encrypted">Save password-encrypted</string>
    <string name="desc_save_password_encrypted">Enter a password-phrase that you will need to reenter every time you want to send funds.</string>
    <string name="button_save_device_encrypted">Save device-encrypted</string>
    <string name="desc_save_device_encrypted">Authenticate on your device to save the wallet and send funds.\nCurrent authentication method: %1$s</string>
    <string name="button_save_keychain">Save in keychain</string>
    <string name="desc_save_keychain">Authenticate on your device to send funds.</string>
    <string name="device_enc_security_none">None</string>
    <string name="device_enc_security_pass">Password, PIN or pattern</string>
    <string name="device_enc_security_biometric_strong">Biometric with strong security</string>
    <string name="device_enc_security_biometric_weak">Biometric, Class 2</string>
    <string name="warning_device_security_change">⚠️ Warning: Changing your device\'s authentication settings (biometric, PIN, password) may cause loss of access to your wallet. Ensure you have your mnemonic phrase safely stored.</string>
    <string name="title_storage_rent_info">Storage Rent Activated</string>
    <string name="desc_storage_rent_info">Storage rent is now active on the Ergo blockchain. Every box (UTXO) requires a minimum amount of ERG to cover storage costs over time. Keep at least 0.001 ERG per box to prevent your funds from being locked. Learn more at ergoplatform.org/docs</string>
    <string name="button_dont_show_again">Don\'t show again</string>
    <string name="title_wallet_details">Wallet configuration</string>
    <string name="label_wallet_name">Descriptive wallet name</string>
    <string name="label_changes_saved">Changes saved</string>
    <string name="label_confirm_delete">Are you sure you want to erase the wallet from this device?\nThis can\'t be undone.</string>
    <string name="desc_display_mnemonic">You can display your mnemonic (seed phrase, paper key) in case you have lost your backup, or to confirm that your backup is correct.</string>
    <string name="button_display_mnemonic">Display mnemonic</string>
    <string name="desc_display_xpubkey">You can add this wallet as a read-only wallet to other wallet applications with your extended public key. No secrets will be shared.</string>
    <string name="button_display_xpubkey">Display public key</string>
    <string name="title_wallet_balance">Balance</string>
    <string name="label_all_addresses">All %1$d addresses</string>
    <string name="desc_signing_request">Please check the details of the transaction to issue.</string>
    <string name="title_inboxes">Amounts to spent</string>
    <string name="desc_inboxes">These amounts will be spent when the transaction is processed.</string>
    <string name="title_outboxes">Outgoing amounts</string>
    <string name="desc_outboxes">These amounts will be sent when the transaction is processed.</string>
    <string name="button_connection_settings">Node and API connections</string>
    <string name="button_reset_defaults">Defaults</string>
    <string name="label_explorer_api_url">Explorer API URL</string>
    <string name="label_node_url">Node URL</string>
    <string name="label_token_verification_url">Token verification service URL</string>
    <string name="label_ipfs_http_gateway">IPFS HTTP gateway</string>
</resources>