<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="?attr/colorSurface">

    <LinearLayout
        style="@style/width_match_parent_max_500"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_prompt"
            style="@style/TextAppearance.App.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_password" />

        <TextView
            android:id="@+id/tv_forgot_pw"
            style="@style/TextAppearance.App.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_horizontal_margin"
            android:gravity="end"
            android:text="@string/label_forgot_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:hint="@string/label_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password_confirm"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/label_password_confirm"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_done"
            style="@style/Widget.App.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elegantTextHeight="true"
            android:text="@string/button_done" />
    </LinearLayout>
</FrameLayout>