<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".wallet.RestoreWalletFragmentDialog">

    <androidx.cardview.widget.CardView
        style="@style/width_match_parent_max_500"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_add_readonly_wallet"
                style="@style/TextAppearance.App.HeadlineCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/half_horizontal_margin"
                android:text="@string/label_readonly_wallet"
                app:drawableStartCompat="@drawable/ic_add_readonly_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_restore_wallet"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc_add_readonly_wallet"
                style="@style/TextAppearance.App.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/intro_add_readonly" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_wallet_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_horizontal_margin"
                android:hint="@string/label_wallet_address"
                app:endIconDrawable="@drawable/ic_qr_code_24"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_add_wallet"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:elegantTextHeight="true"
                android:text="@string/menu_add_wallet" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>