<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.cardview.widget.CardView
        style="@style/width_match_parent_max_500"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_create_wallet"
                style="@style/TextAppearance.App.HeadlineCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/half_horizontal_margin"
                android:text="@string/label_create_wallet"
                app:drawableStartCompat="@drawable/ic_build_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_restore_wallet"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc_create_wallet"
                style="@style/TextAppearance.App.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/intro_create_wallet" />

            <TextView
                android:id="@+id/tv_mnemonic"
                style="@style/TextAppearance.App.Headline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                tools:text="smart later gauge spring vivid recall finish car knife consider rough floor change repeat spring" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_copy"
                    style="@style/Widget.App.Button.PrimaryTint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:text="@string/button_copy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_next_step"
                    style="?attr/materialButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:text="@string/button_done"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>